--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,11 @@
   text-align: center;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
+@font-face {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: normal;
+  src: url('https://fonts.googleapis.com/css?family=Fjalla+One');
+}
 
 body {
   font-family: 'Fjalla One', sans-serif;
