--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,3 @@
-#CustomerSearch {
-  height: 50px;
-}
-
-#CustomerSearchCategory, #CustomerSearchField, #CustomerSearchButton, option {
-
-}
-
-#CustomerSearchCategory, #CustomerSearchField, #CustomerSearchButton, option:focus {
-
-}
-
-#CustomerSearchCategory, #CustomerSearchField, #CustomerSearchButton {
-  margin-right: 10px;
-}
-
 .list-group-item:hover {
   background-color: #DCDCDC;
 };
@@ -27,11 +11,7 @@
     margin-bottom: 10px;
     overflow:auto;
     -webkit-overflow-scrolling: touch;
-    padding-top: 10px;
-}
-
-.CustomerList {
-  padding-left: 30px;
+    padding-top: 2px;
 }
 
 #comment {
@@ -83,4 +63,16 @@ body {
   margin-top: 5%;
   margin: 5%;
   align-self: center;
+}
+
+#RentalSearchField, #RentalSearchCategory, #AccessorySearchField, #AccessorySearchCategory, #BicycleSearchCategory, #BicycleSearchField, #CustomerSearchCategory, #CustomerSearchField {
+  margin-right: 10px;
+}
+
+#CustomerSearchCategory, #EmployeeSearchCategory, #AccessorySearchCategory, #BicycleSearchCategory {
+  width: 150px;
+}
+
+#CustomerSearchButton, #EmployeeSearchButton, #RentalSearchButton, #AccessorySearchButton, #BicycleSearchButton {
+  width: 100px;
 }
